[tool.poetry]
name = "cached-notion"
version = "0.1.6"
description = ""
authors = ["tim-watcha <tim@watcha.com>"]
readme = "README.md"
packages = [{include = "cached_notion"}]

[tool.poetry.dependencies]
python = "^3.9.1"
notion-client = "^2.0.0"
sqlitedict = "^2.1.0"
coloredlogs = "^15.0.1"
tqdm = "^4.66.1"
pydantic = "^2.5.2"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
